--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.45.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "firebase": "^9.6.1",
+    "netlify": "^10.1.1"
   }
 }
